# displayinterface

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/displayinterface/: __about__.py  __init__.py  displayinterface.py
tests/: __init__.py
