[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "displayinterface"
dynamic = ["version"]
description = 'A cross-platform Python module for querying display information and cursor position'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Joel Murphy", email = "joelmurphy444@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'pyautogui>=0.9.54'
]

[project.urls]
Documentation = "https://github.com/b4shful/displayinterface#readme"
Issues = "https://github.com/b4shful/displayinterface/issues"
Source = "https://github.com/b4shful/displayinterface"

[tool.hatch.version]
path = "src/displayinterface/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/displayinterface tests}"

[tool.coverage.run]
source_pkgs = ["displayinterface", "tests"]
branch = true
parallel = true
omit = [
  "src/displayinterface/__about__.py",
]

[tool.coverage.paths]
displayinterface = ["src/displayinterface", "*/displayinterface/src/displayinterface"]
tests = ["tests", "*/displayinterface/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
